# OpsPilot

./: .dockerignore  .env.example  .envrc  .git-commit-msg.txt  .gitignore  .gitleaks.toml  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_STAGE_1.md  Makefile  NOTICE  README.md  README.zh-CN.md  README_zh.md  ROADMAP.md  SECURITY.md  STAGES.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
benchmarks/: bench_chunker.py  bench_tokenizer.py
crates/opspilot-chunker/: Cargo.toml  pyproject.toml
crates/opspilot-chunker/src/: lib.rs
crates/opspilot-core/: Cargo.toml
crates/opspilot-tokenizer/: Cargo.toml  pyproject.toml
crates/opspilot-tokenizer/src/: lib.rs
deploy/nginx/: opspilot.conf
deploy/packaging/: README.md
deploy/systemd/: README.md  opspilot.service
docs/: architecture.md  channels.md  cli.md  deployment.md  stage1-dev.md
docs/adr/: 0001-retrieval-mode-prefetch-for-weak-models.md  0002-stage2-single-user-no-auth.md  0003-stage2-sync-first-no-streaming.md  0004-stage4-webui-over-tauri.md  0005-approval-gate-is-defense-signal-not-boundary.md  0006-processing-layer-not-system-of-record.md  0007-monitoring-prometheus-client-otel-compatible-logs.md  0008-macos-packaging-uv-tool.md  0009-sandbox-l3-gvisor-over-firecracker.md  0010-remote-access-foundation-before-channels.md  0011-remote-access-bearer-token-proxy-tls.md  0012-telegram-channel-long-polling.md
docs/plans/: PR-8.5_retrieval_mode_prefetch.md
docs/specs/: work-item-artifacts.md
examples/itr_ticket_summary_zh_v1_3_0/: README.md  checks.md
examples/mcp_config/: mcp-config.yaml
examples/sandbox_shell_l2/: action.yaml
examples/scn_request_fulfillment_zh/: README.md
examples/scn_ticket_summary_en/: README.md  checks.md
examples/scn_ticket_summary_zh/: README.md  checks.md
examples/scn_vendor_doc_en/: README.md
harness/schemas/: eval-result.schema.json  fixture.schema.json
harness/templates/: eval-config.template.yaml  fixture.template.json  golden.template.json
memory/: README.md  SPEC.md
memory/schemas/: kb-document.schema.json  memory-record.schema.json  retrieval-query.schema.json
memory/storage/: lancedb-schema.md  sqlite-schema.sql
memory/templates/: ingestion.template.yaml  memory-record.template.md
orchestrator/schemas/: incident_summary_v1.schema.json  ticket_summary_v1.schema.json  vendor_doc_v1.schema.json  work_item_classification_v1.schema.json
playbooks/pb_classify_work_item_zh/: playbook.yaml  prompt.md
playbooks/pb_request_fulfillment_zh/: playbook.yaml  prompt.md
playbooks/pb_ticket_summary_en/: playbook.yaml  prompt.md
playbooks/pb_ticket_summary_zh/: playbook.yaml  prompt.md
playbooks/pb_ticket_summary_zh_gemini/: playbook.yaml  prompt.md
providers/: README.md  SPEC.md  catalogs.md
sandbox/: SPEC.md
sandbox/backends/: README.md
scripts/: gen_tui_gif.py
session/: SPEC.md
skills/: README.md
tests/: conftest.py  test_api.py  test_api_auth.py  test_api_health.py  test_api_iteration.py  test_api_routes.py  test_api_run_stream.py  test_channels_telegram.py  test_chunker.py  test_classify.py  test_cli_golden_provider.py  test_cli_ingest.py  test_config.py  test_conflict.py  test_harness.py  test_harness_reporter.py  test_ids.py  test_ingestion.py  test_iteration.py  test_iteration_registry.py  test_kb_loader.py  test_lance_store.py  test_markitdown_adapter.py  test_mcp.py  test_mcp_registry.py  test_mcp_transport.py  test_observability.py  test_orchestrator.py  test_providers_anthropic.py  test_providers_ollama.py  test_providers_openai.py  test_redaction.py  test_retrieval.py  test_sandbox.py  test_schemas.py  test_session.py  test_sqlite_store.py  test_storage_init.py  test_timeutil.py  test_tokenizer.py  (+9 more)
web/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  vite.config.ts
wiki/: README.md  SPEC.md
(+336 files in other folders)
