[workspace]
members = [
    "crates/opspilot-core",
    "crates/opspilot-chunker",
    "crates/opspilot-tokenizer",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Vicente Liu <vicenteliuca@gmail.com>"]
license = "Apache-2.0"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
