[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "opspilot-chunker"
version = "0.1.0"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.12",
]

[tool.maturin]
module-name = "opspilot_chunker"
features = ["pyo3/extension-module"]
