[package]
name = "opspilot-tokenizer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "opspilot_tokenizer"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
opspilot-core = { path = "../opspilot-core" }
